# routine

./: .gitignore  .lintstagedrc.json  LICENSE  README.md  compose.yaml  package.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: Cargo.toml  README.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
backend/middleware/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: index.ts  main.rs  test_connection.rs
backend/src/application/ports/: README.md
backend/src/application/usecases/: README.md
backend/src/domain/: README.md
backend/src/infrastructure/d1/: README.md
backend/src/interfaces/http/graphql/: schema.ts  server.ts
backend/src/middlewares/: error-handler.ts  request-id.ts  request-logger.ts
backend/src/routes/: health.ts
backend/src/utils/: logger.ts
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  wrangler.toml
frontend/.husky/: pre-commit
frontend/project.inlang/: project_id
frontend/src/: worker-configuration.d.ts
frontend/src/lib/api/: README.md
frontend/src/lib/graphql/: client.ts
frontend/src/lib/stores/: README.md
frontend/src/lib/viewmodels/: README.md
