[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql-axum = "7.0.17"
axum = "0.8.4"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
